--- a/photoshare/photoshare/LaunchCameraViewController_iPad.xib
+++ b/photoshare/photoshare/LaunchCameraViewController_iPad.xib
@@ -22,7 +22,7 @@
                 </imageView>
                 <pickerView contentMode="scaleToFill" id="emm-Ig-r4k">
                     <rect key="frame" x="0.0" y="788" width="768" height="216"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                 </pickerView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
